--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,3 +3,36 @@
     margin: 0;
     padding: 0;
 }
+
+.home {
+    background-color: #f5f5f5;
+    padding: 50px;
+}
+
+#website-navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #6cf;
+    height: 50px;
+    width: 100%;
+
+    ul {
+        li {
+            a {
+                color: black;
+            }
+        }
+    }
+}
+
+#website-footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background: #6cf;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
