--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,9 +4,14 @@
     padding: 0;
 }
 
+html,
+body {
+    height: 100%;
+}
+
 .home {
     background-color: #f5f5f5;
-    padding: 50px;
+    padding: 80px;
 }
 
 #website-navbar {
