--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,13 +13,21 @@ body {
     background-color: #f5f5f5;
     padding: 20px 80px;
 
+    &__hero-section {
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
     &__learn-more {
         cursor: pointer;
         font-weight: bold;
     }
 
     &__paragraph {
-        margin-top: 1000px;
+        // margin-top: 1000px;
     }
 }
 
