--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,7 @@
 $theme-colors: (
     "blue1": #0487c0,
     "blue2": #046b93,
-    "grey": #a6bcd4,
+    "light-grey": #e4ebf3,
     "blue3": #2ca2d8,
     "blue4": #044c67
 );
@@ -18,7 +18,7 @@ body {
 }
 
 .home {
-    background-color: #f5f5f5;
+    background-color: map-get($theme-colors, 'light-grey');
     padding: 0 80px;
 
     &__hero-section {
@@ -93,12 +93,12 @@ body {
 }
 
 .divider {
-    text-align: center;
     height: 12px;
     width: 180px;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(6,68,160,1) 12%, rgba(0,212,255,1) 100%);
     border-radius: 10px;
+    margin: 0 auto;
 }
 
 #website-navbar {
