--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -121,7 +121,8 @@ body {
 #website-footer {
     width: 100%;
     height: 60px;
-    background: #6cf;
+    color: white;
+    background: map-get($theme-colors, 'blue3');
     display: flex;
     justify-content: center;
     align-items: center;
