--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -35,7 +35,7 @@ body {
         align-items: center;
 
         &__heading {
-            font-size: 40px;
+            font-size: 50px;
             text-align: center;
         }
     }
@@ -46,7 +46,7 @@ body {
         &__heading {
             text-align: center;
             font-weight: bold;
-            font-size: 30px;
+            font-size: 40px;
         }
 
         &__content {
@@ -106,6 +106,7 @@ body {
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(6,68,160,1) 12%, rgba(0,212,255,1) 100%);
     border-radius: 10px;
     margin: 0 auto;
+    margin-top: 10px;
 }
 
 #website-navbar {
