--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -100,6 +100,7 @@ body {
         .contact__content {
             display: flex;
             flex-direction: column;
+            text-align: center;
         }
     }
 
