--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -93,6 +93,13 @@ body {
 
                 img {
                     box-shadow: 5px 10px 18px #888;
+                    transition: all .2s ease-in-out;
+                    cursor: pointer;
+
+                    &:hover {
+                        transform: scale(1.05);
+                        box-shadow: 5px 10px 18px #3b5998;
+                    }
                 }
             }
         }
