Re-add WiP message reduce size of jumbotron text when in mobile view

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,6 +31,10 @@ body {
     padding-right: 80px;
     padding-bottom: 75px;
 
+    &__cta {
+        margin-top: 50px;
+    }
+
     &__hero-section {
         height: 100vh;
         display: flex;
@@ -41,6 +45,12 @@ body {
         &__heading {
             font-size: 50px;
             text-align: center;
+
+            @media screen and (max-width: 768px) {
+                & {
+                    font-size: 35px;
+                }
+            }
         }
     }
 
