Add transition on hover to buttons

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -157,3 +157,15 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+// Helpers
+
+.scale-on-hover {
+    transform: scale(1);
+    transition: all .2s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+        transform: scale(1.05);
+    }
+}
