Add scrollToAboutSection method

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,6 +41,7 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        font-weight: 600;
 
         &__heading {
             font-size: 50px;
@@ -167,7 +168,7 @@ body {
     cursor: pointer;
 
     &:hover {
-        transform: scale(1.05);
+        transform: scale(1.10);
     }
 }
 
