--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -180,7 +180,7 @@ body {
 }
 
 // Transitions and animations
-.slide-enter-active {
+.slide-in-from-left-enter-active {
     animation: slide-in-from-left .7s;
 }
 
