--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -153,18 +153,20 @@ body {
 // Footer
 #website-footer {
     width: 100%;
-    height: 60px;
     color: white;
     background: map-get($theme-colors, 'blue3');
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 // Helpers
 .scale-on-hover {
     transform: scale(1);
-    transition: all .2s ease-in-out;
+    transition: transform .2s ease-in-out;
     cursor: pointer;
 
     &:hover {
