--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -182,15 +182,16 @@ body {
 }
 
 // Transitions and animations
-.slide-in-from-left-enter-active {
-    animation: slide-in-from-left .7s;
+.slide-in-from-left {
+    animation: slide-in-from-left .5s ease-in-out;
 }
 
 @keyframes slide-in-from-left {
-    0% {
-        transform: translateX(-100%);
+    from {
+        transform: translate(-100%);
     }
-    100% {
-        transform: translateX(0);
+
+    to {
+        transform: translate(0);
     }
 }
