Add basic structure and styling to project cards

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -124,6 +124,15 @@ body {
                 align-self: center;
             }
         }
+
+        .projects__content {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 20px;
+        }
     }
 
     &__learn-more {
