--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -24,15 +24,17 @@
 
 // Transitions and animations
 .slide-in-from-left {
-    animation: slide-in-from-left .5s ease-in-out;
+    animation: slide-in-from-left .7s ease-in-out;
 }
 
 @keyframes slide-in-from-left {
     from {
+        opacity: 0;
         transform: translate(-100%);
     }
 
     to {
+        opacity: 1;
         transform: translate(0);
     }
 }
