refactor: remove webkit prefix from linear-gradient in jumbotron

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -16,7 +16,7 @@
 }
 
 .gradient-text {
-    background: -webkit-linear-gradient(270deg, #0048c5 35%, #00ffff);
+    background: linear-gradient(180deg, #0048c5 35%, #00ffff);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
