refactor: change color of gradient

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -18,7 +18,7 @@
 }
 
 .gradient-text {
-    background: linear-gradient(180deg, #0048c5 35%, #00ffff);
+    background: linear-gradient(180deg, #bd00c5 20%, #31ffff);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
